Bug 203973 txXSLTProcessor::shutdown releases a log module it doesn't own r=axel sr=peterv