extensions/transformiix/source/base/TxLog.h
@@ -60,14 +60,9 @@ public:
     txLog::xpath = PR_NewLogModule("xpath"); \
     txLog::xslt  = PR_NewLogModule("xslt")
 
-#define TX_LG_DELETE \
-    PR_FREEIF(txLog::xpath); \
-    PR_FREEIF(txLog::xslt)
-
 #else
 
 #define TX_LG_IMPL
 #define TX_LG_CREATE
-#define TX_LG_DELETE
 
 #endif
